--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "angular-start",
-  "version": "0.0.1",
-  "description": "Starter Pack based on Angular Tutorial using NPM instead of bowser",
-  "author": "Adrian Haugsness",
+  "private": true,
+  "version": "0.0.0",
+  "description": "A starting point for AngularJS",
+  "repository": "https://github.com/theorye/angular-start",
   "license": "MIT",
-  "dependencies": {
-    "angular": "^1.5.6"
-  },
   "devDependencies": {
+    "bower": "^1.7.7",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
@@ -18,19 +17,21 @@
     "shelljs": "^0.6.0"
   },
   "scripts": {
+    "postinstall": "bower install",
+
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
+
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
+
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
+
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor e2e-tests/protractor.conf.js",
+
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
-  },
-  "bugs": {
-    "url": "https://github.com/theorye/weatherAPP/issues"
-  },
-  "homepage": "https://github.com/theorye/weatherAPP#readme"
+  }
 }
